Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69139

WebEngine fails to build with Visual Studio 2017 15.7.4

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.7
    • 5.9.6
    • WebEngine
    • None
    • Windows

    Description

      FAILED: obj/third_party/webrtc/call/call/call.obj
      ninja -t msvc -e environment.x64 -- "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.14.26428\bin\HostX64\x64/cl.exe" /nologo /showIncludes /FC @obj/third_party/webrtc/call/call/call.obj.rsp /c ../../../../../src/qtwebengine/src/3rdparty/chromium/third_party/webrtc/call/call.cc /Foobj/third_party/webrtc/call/call/call.obj /Fd"obj/third_party/webrtc/call/call_cc.pdb"
      d:\dev\qt\5.9\src\qtwebengine\src\3rdparty\chromium\third_party\webrtc\modules\video_coding\sequence_number_util.h(101): fatal error C1001: An internal error has occurred in the compiler.
      (compiler file 'f:\dd\vctools\compiler\cxxfe\sl\p1\c\outdname.c', line 5310)
       To work around this problem, try simplifying or changing the program near the locations listed above.
      Please choose the Technical Support command on the Visual C++
       Help menu, or open the Technical Support help file for more information
      c:\program files (x86)\microsoft visual studio\2017\community\vc\tools\msvc\14.14.26428\include\xutility(301): note: see reference to class template instantiation 'webrtc::DescendingSeqNumComp<uint16_t,0>' being compiled
      c:\program files (x86)\microsoft visual studio\2017\community\vc\tools\msvc\14.14.26428\include\xutility(301): note: see reference to variable template 'const bool is_empty_v<webrtc::DescendingSeqNumComp<unsigned short,0> >' being compiled
      c:\program files (x86)\microsoft visual studio\2017\community\vc\tools\msvc\14.14.26428\include\xtree(1078): note: see reference to class template instantiation 'std::_Tree_comp_alloc<_Traits>' being compiled
              with
              [
                  _Traits=std::_Tmap_traits<uint16_t,webrtc::NackModule::NackInfo,webrtc::DescendingSeqNumComp<uint16_t,0>,std::allocator<std::pair<const uint16_t,webrtc::NackModule::NackInfo>>,false>
              ]
      c:\program files (x86)\microsoft visual studio\2017\community\vc\tools\msvc\14.14.26428\include\map(82): note: see reference to class template instantiation 'std::_Tree<std::_Tmap_traits<_Kty,_Ty,_Pr,_Alloc,false>>' being compiled
              with
              [
                  _Kty=uint16_t,
                  _Ty=webrtc::NackModule::NackInfo,
                  _Pr=webrtc::DescendingSeqNumComp<uint16_t,0>,
                  _Alloc=std::allocator<std::pair<const uint16_t,webrtc::NackModule::NackInfo>>
              ]
      d:\dev\qt\5.9\src\qtwebengine\src\3rdparty\chromium\third_party\webrtc\modules\video_coding\nack_module.h(86): note: see reference to class template instantiation 'std::map<uint16_t,webrtc::NackModule::NackInfo,webrtc::DescendingSeqNumComp<uint16_t,0>,std::allocator<std::pair<const _Kty,_Ty>>>' being compiled
              with
              [
                  _Kty=uint16_t,
                  _Ty=webrtc::NackModule::NackInfo
              ]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes