Unbreak compilation with MSVC 2015

Remove a static_assert that was added in commit 844aec5c7047489a1d3,
but broke compilation with cl.exe 14.0:

   modules\video_coding\sequence_number_util.h(90): error C2672: 'rtc::safe_cmp::Lt': no matching overloaded function found
   modules\video_coding\sequence_number_util.h(118): note: see reference to class template instantiation 'webrtc::SeqNumUnwrapper<T,M>' being compiled
   modules\video_coding\sequence_number_util.h(90): error C2783: 'bool rtc::safe_cmp::Lt(T1 &&,T2 &&)': could not deduce template argument for '__formal'
   base\safe_compare.h(171): note: see declaration of 'rtc::safe_cmp::Lt'
   modules\video_coding\sequence_number_util.h(90): error C2783: 'bool rtc::safe_cmp::Lt(T1,T2)': could not deduce template argument for '__formal'
   base\safe_compare.h(171): note: see declaration of 'rtc::safe_cmp::Lt'

Task-number: QTBUG-69139
Change-Id: I90a01bbda539388498f48100001c58cab0350b0b
Reviewed-by: Andy Shaw <andy.shaw@qt.io>